<resources>
    <string name="app_name">WeShop</string>

    //Обработка ошибок
    <string name="error_unknown_title">Что-то пошло не так…</string>
    <string name="error_unknown_body">Пожалуйста проверьте ваше интернет соединение или попробуйте позднее</string>
    <string name="error_failed_connection_to_server">Не удалось установить соединение с сервером</string>
    <string name="error_registration">Ошибка при регистрации!</string>

    //Alert Диалог
    <string name="dialog_ok">Oк</string>
    <string name="authorization">Авторизация</string>
    <string name="phone_number_or_email">Телефон номер или email</string>
    <string name="password">Пароль</string>
    <string name="to_come_in">Войти</string>

    //Content
    <string name="hint_number">+7(000)-000-00 00</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_your_phone_number">Введите номер телефона</string>
    <string name="forget_password">Забыл пароль?</string>
    <string name="don_have_an_account_register_now">Нет аккаунта? Зарегистрироваться</string>
    <string name="register">Регистрация</string>
    <string name="full_name">Полное имя</string>
    <string name="number">Номер</string>
    <string name="email">Эл. адрес</string>
    <string name="sign_in">Есть аккаунт? Войти</string>

    //Registration
    <string name="validate_full_name">Введите свое имя!</string>
    <string name="validate_phone">Введите номер телефона!</string>
    <string name="validate_password">Введите пароль!</string>
    <string name="validate_password_size">Пароль должен состоять из 6 символов!</string>
    <string name="validate_password_fit">Пароль не совпадает!</string>
    <string name="validate_email">Введите почту!</string>
    <string name="validate_sms_code">Введите смс код!</string>
    <string name="code_sms">Код из СМС</string>
    <string name="retry_password">Повторите пароль</string>
    <string name="send">Отправить</string>
    <string name="password_reset">Сброс пароля</string>
    <string name="password_changed_successfully">Пароль успешно изменён!</string>

</resources>