<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimens_30dp"
        android:layout_marginEnd="@dimen/dimens_30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display_bolds"
            android:text="@string/authorization"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_35dp"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/phone_number_or_email"
            android:textColor="@color/black_90"
            android:textSize="@dimen/dimens_14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_7dp"
            android:background="@drawable/shape_stroke_gray_color"
            android:fontFamily="@font/playfair_display_bold"
            android:padding="@dimen/dimens_10dp"
            android:textSize="@dimen/dimens_14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_15dp"
            android:fontFamily="@font/playfair_display_bold"
            android:text="@string/password"
            android:textColor="@color/black_90"
            android:textSize="@dimen/dimens_14sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_7dp"
            android:background="@drawable/shape_stroke_gray_color"
            android:fontFamily="@font/playfair_display_bold"
            android:inputType="textPassword"
            android:padding="@dimen/dimens_10dp"
            android:textSize="@dimen/dimens_14sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_to_come_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:backgroundTint="@color/black"
            android:paddingHorizontal="@dimen/dimens_25dp"
            android:paddingVertical="@dimen/dimens_10dp"
            android:text="@string/to_come_in"
            android:textColor="@color/white"
            android:textSize="@dimen/dimens_14sp"
            app:cornerRadius="@dimen/dimens_5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>